--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ input[type="submit"] {
 	border-color: #ccc #ccc #bbb;
 	border-radius: 3px;
 	background: #e6e6e6;
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
+	//box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
 	color: rgba(0, 0, 0, .8);
 	font-size: 12px;
 	font-size: 0.75rem;
@@ -249,7 +249,7 @@ input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
 	border-color: #ccc #bbb #aaa;
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
+	//box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
 }
 
 button:focus,
@@ -261,7 +261,7 @@ input[type="button"]:active,
 input[type="reset"]:active,
 input[type="submit"]:active {
 	border-color: #aaa #bbb #bbb;
-	box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
+	//box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
 }
 
 input[type="text"],
@@ -449,7 +449,7 @@ a:active {
 	line-height: 1.3;
 }
 .cm-site-nav-wrap .navbar-nav > li > a:hover,
-.cm-site-nav-wrap .navbar-default .navbar-nav > li > a:focus,
+.cm-site-nav-wrap .navbar-default .navbar-nav > li > a:focus, 
 .cm-site-nav-wrap .navbar-default .navbar-nav > li > a:hover{
 	color:#FF6600;
 }
@@ -697,7 +697,7 @@ a:active {
     text-transform: uppercase;
     color: #545E68;
     font-size: 12px;
-}
+} 
 
 #secondary ul{
 	list-style: none;
@@ -794,7 +794,7 @@ a:active {
 }
 
 #secondary .tagcloud a {
-    background-color: #fff;
+    background-color: #fff;	
     border: 1px solid #d50f00;
     border-radius: 5px;
     color: #d50f00;
@@ -822,12 +822,85 @@ a:active {
 .comments-area,
 .posts-navigation,
 .site-main .post-navigation,
+.site-main .not-found,
+#our-team.site-main,
 .page-header{
     background: #fff;
     box-sizing: border-box;
     box-shadow: 0px 0px 1px 0px rgba(50, 50, 50, 0.1);
+    margin-bottom: 2%;
     padding: 4%;
 }
+
+/*404 error*/
+
+.not-found .page-header{
+    border-bottom-width: 0;
+    box-shadow: 0 0 0 transparent;
+    padding: 0;
+}
+
+
+/*Search*/
+.search-form {
+  display: block;
+  position: relative;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+.search-form .search-field {
+  display: inline-block;
+  margin: 0;
+  width: 100%;
+  height: 45px;
+  padding: 10px 80px 10px 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  border-radius: 0;
+  font-weight: 500;
+}
+.search-form label {
+  display: block;
+}
+
+.search-form .search-submit {
+  height: 45px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  font-size: 13px;
+  text-transform: uppercase;
+  font-weight: bold;
+  background: #391b5d;
+  color: #fff;
+}
+.search-form .search-submit:hover {
+  background: #3f3f3f;
+}
+
+
+/*--------------------------------------------------------------
+# Custom Pages
+--------------------------------------------------------------*/
+#our-team .entry-title{
+	color: #FF6600;
+	margin-bottom: 25px;
+	line-height: 1.3em;
+}
+
+
 
 /*--------------------------------------------------------------
 ## Posts and pages
@@ -901,7 +974,7 @@ a:active {
     font-weight: 300;
     font-size: 35px;
 	font-size: 3.5rem;
-    color: #222;
+    color: #222;	
 }
 
 .page-entry-title,
@@ -1505,28 +1578,3 @@ ul,ol {
 /*--------------------------------------------------------------
 ## Media Query
 --------------------------------------------------------------*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.panel p:last-child {
-	margin-bottom: 0px;
-}
