--- a/style.css
+++ b/style.css
@@ -449,7 +449,7 @@ a:active {
 	line-height: 1.3;
 }
 .cm-site-nav-wrap .navbar-nav > li > a:hover,
-.cm-site-nav-wrap .navbar-default .navbar-nav > li > a:focus, 
+.cm-site-nav-wrap .navbar-default .navbar-nav > li > a:focus,
 .cm-site-nav-wrap .navbar-default .navbar-nav > li > a:hover{
 	color:#FF6600;
 }
@@ -697,7 +697,7 @@ a:active {
     text-transform: uppercase;
     color: #545E68;
     font-size: 12px;
-} 
+}
 
 #secondary ul{
 	list-style: none;
@@ -794,7 +794,7 @@ a:active {
 }
 
 #secondary .tagcloud a {
-    background-color: #fff;	
+    background-color: #fff;
     border: 1px solid #d50f00;
     border-radius: 5px;
     color: #d50f00;
@@ -974,7 +974,7 @@ a:active {
     font-weight: 300;
     font-size: 35px;
 	font-size: 3.5rem;
-    color: #222;	
+    color: #222;
 }
 
 .page-entry-title,
@@ -1578,3 +1578,46 @@ ul,ol {
 /*--------------------------------------------------------------
 ## Media Query
 --------------------------------------------------------------*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* */
+.em-booking-buttons {
+	text-align: center;
+}
+
+input[type="submit"] {
+	font-size: 1.3rem;
+}
+
+
+.em-booking.css-booking {
+	padding: 20px;
+	border: 1px solid #f1f1f1;
+	border-radius: 7px;
+	width: 85%;
+	margin: 0 auto;
+}
