--- a/style.css
+++ b/style.css
@@ -913,6 +913,21 @@ a:active {
 .cm-white{
 	color: #fff;
 }
+.cm-gray{
+	color: #4a4a4a;
+}
+
+/*Text*/
+.text-large{
+	font-size:24px;
+}
+.text-medium{
+	font-size:18px !important;
+}
+.text-small{
+	font-size:14px;
+}
+
 .cm-motive-wrap{
 	color: #fff;
 	margin: 0 auto;
@@ -984,6 +999,11 @@ a:active {
     line-height: 1.3;
     margin-bottom: 20px;
 }
+
+.cm-procedure .text-medium{
+	text-transform:uppercase;
+}
+
 /*Testimonial*/
 .cm-testimonials{
 	background: #5b1985; /* Old browsers */
@@ -1036,6 +1056,10 @@ a:active {
 .cm-testimonials .unslider-nav ol li{
 	height: 10px;
 	width: 10px;
+}
+/*Card*/
+.card-image p{
+	margin: 0;
 }
 /*Contact Us*/
 .cm-contact-us{
